fix home-title-block z-index

--- a/pycon_portugal_2022/static/sass/_home.scss
+++ b/pycon_portugal_2022/static/sass/_home.scss
@@ -25,6 +25,7 @@
         border: .5rem black solid;
         padding: 2rem 2rem 1.5rem;
         margin: 0rem 2rem 2rem;
+        z-index: 9999;
       }
 
       .btn-tickets {
